fix: fixed hateoas
