# sources/core/Ggio.BikeSherpa.Backend/Features/Customers/Add/AddCustomerEndpoint.cs
@@ -12,7 +12,7 @@ public class AddCustomerEndpoint(IMediator mediator) : Endpoint<Model.CustomerCr
      {
           Post("/customer");
           Policies("write:customers");
-          Description(x => x.WithTags("customer").WithName("CreateCustomer"));
+          Description(x => x.WithTags("customer"));
      }
 
      public override async Task HandleAsync(Model.CustomerCrud req, CancellationToken ct)
